fix about me text-area row.

--- a/src/Adstacy/AppBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/settings.less
@@ -23,11 +23,15 @@
       width: 480px;
     }
 
-    .form-widget-a, 
+    .form-widget-a,
     .form-widget-p {
       display: block;
       height: 34px;
       padding: 6px 2px;
     }
+  }
+
+  textarea.form-control {
+    resize: vertical;
   }
 }
