move some container to middle.

--- a/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Resetting/request.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block content %}
-  <div class="form-container panel panel-default">
+  <div id="reset-password-container" class="panel panel-default">
     <div class="panel-heading">
       <h1>Reset Password</h1>
     </div>
