--- a/src/Adstacy/AppBundle/Resources/public/less/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/user.less
@@ -43,44 +43,48 @@
   }
 }
 
-#user-profile-container {
+#user-profile {
   margin-left: 7px;
   margin-right: 7px;
-  width: 800px;
+  margin-top: 14px;
+  width: 486px;
+
+  .panel-default {
+    border: 0;
+    margin-bottom: 0;
+  }
 
   .profile-picture {
+    border-radius: 3px 0 0 0;
     float: left;
     margin-right: 10px;
-    width: 100px;
+    width: 130px;
     img {
-      width: 100px;
+    border-radius: 3px 0 0 0;
+      width: 130px;
     }
   }
-  .btn {
-    font-size: 12px;
-    padding: 3px 0;
-    width: 90px;
-  }
-
-  .user-info {
+  .user {
     float: left;
-    width: 650px;
+    width: 342px;
+  }
+  .user-info {
+    padding: 5px 5px 0 0;
   }
   .user-info-realname {
     color: #b00;
     font-size: 20px;
     margin: 0;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
   }
   .user-info-about {
     color: #999;
     font-size: 13px;
     line-height: 1.5;
     margin: 0;
-    margin-bottom: 5px;
-    min-height: 40px;
+    min-height: 50px;
     .empty {
-      color: #ccc;
+      color: #aaa;
       font-style: italic;
     }
     a {
@@ -90,8 +94,27 @@
     }
   }
   .user-info-menu {
-    border-top: 1px dotted #dfdfdf;
-    padding-top: 5px;
+    background-color: #eee;
+    border-top: 1px solid #dfdfdf;
+    border-radius: 0 0 4px 4px;
     margin-bottom: 0;
+    padding: 5px 5px 6px 5px;
+    position: relative;
+    a {
+      color: #888;
+      display: inline-block;
+      font-size: 12px;
+      font-weight: bold;
+      margin-left: 20px;
+    }
+    .follow-action {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .btn-follow {
+      border-radius: 0 0 3px 0;
+      color: #fff;
+    }
   }
 }
