--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -2,6 +2,10 @@
 
 {% block show_content %}
   {% if paginator.getCurrentPageResults|length > 0 %}
+    <div class="page-title jumbotron text-center">
+      <h1>{{ tab|title }}</h1>
+    </div>
+
     <div class="adstacy-container jscroll">
       {{ block('ajax_content') }}
     </div>
