--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -44,7 +44,7 @@
       {% endif %}
       <div class="btn-group">
         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span aria-hidden="true" class="icon-share"></span></a>
-        <ul class="ad-social-list dropdown-menu" role="menu">
+        <ul class="ad-social-list dropdown-menu pull-right" role="menu">
           <li>
             {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
             {% set tags = ad.tags|join(',') %}
