--- a/src/Adstacy/AppBundle/Resources/public/less/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/user.less
@@ -24,7 +24,7 @@
       margin-bottom: 5px;
     }
   }
-  
+
   .user-realname {
     font-size: 14px;
     font-weight: bold;
@@ -110,11 +110,12 @@
     .follow-action {
       position: absolute;
       right: 0;
-      top: 0;
+      top: -1px;
     }
     .btn-follow {
       border-radius: 0 0 3px 0;
       color: #fff;
+      height: 32px;
     }
   }
 }
