--- a/src/Adstacy/AppBundle/Resources/public/less/utilities.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/utilities.less
@@ -28,6 +28,14 @@
   padding: 0;
 }
 
+a.link-muted {
+  color: @text-muted;
+
+  &:hover {
+    color: darken(@text-muted, 15%);
+  }
+}
+
 /* unused
 .h-stack {
   display: table;
