--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -19,6 +19,7 @@ body {
 }
 
 #btn-navbar-expand {
+  font-size: 20px;
   padding: 6px 12px;
 }
 
@@ -209,6 +210,10 @@ ul.nav-expand {
       width: 100%;
     }
   }
+}
+
+.btn-follow + .btn-block {
+  margin-top: 0;
 }
 
 // Form
