--- a/src/Adstacy/AppBundle/Resources/public/less/base/search.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/search.less
@@ -1,3 +1,7 @@
+#form-search {
+  position: relative;
+}
+
 #search-container {
   width: 360px;
 
@@ -23,6 +27,7 @@
     min-width: 80px;
 
     > li > a {
+      cursor: pointer;
       padding-left: 12px;
       padding-right: 24px;
     }
