--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -76,12 +76,15 @@
           <div class="thumb"><img src="{{ vich_uploader_asset(adByUser, 'image')|imagine_filter('mini_thumb')}}"></div>
           {% endfor %}
         </div>
-        <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">more ads</a>
-        {% if app.user != user %}
-          {% set hasFollow = app.user.hasFollowUser(user) %}
-          <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block follow-user {% if hasFollow %}hide{% endif %}">Follow</a>
-          <a href="{{ path('adstacy_app_user_unfollow', {username: ad.user.username}) }}" class="btn btn-primary btn-block unfollow-user {% if not hasFollow %}hide{% endif %}">Unfollow</a>
-        {% endif %}
+
+        <div class="panel-body">
+          <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">more ads</a>
+          {% if app.user != user %}
+            {% set hasFollow = app.user.hasFollowUser(user) %}
+            <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow follow-user {% if hasFollow %}hide{% endif %}">Follow</a>
+            <a href="{{ path('adstacy_app_user_unfollow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow unfollow-user {% if not hasFollow %}hide{% endif %}">Unfollow</a>
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
