--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -8,7 +8,7 @@
 
 {% block ajax_content %}
   {% for ad in paginator.getCurrentPageResults %}
-    {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad} %}
+    {% include 'AdstacyAppBundle:Ad:ad.html.twig' with {ad: ad, promotedBy: true} %}
   {% endfor %}
   {% if paginator.hasNextPage %}
     {% set params = app.request.query.all|merge({page: paginator.getNextPage}) %}
