--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -82,7 +82,7 @@
 
         <div class="panel-body">
           <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}" class="btn btn-default btn-block" style="margin-bottom: 10px;">more ads</a>
-          {% if app.user != user %}
+          {% if app.user and app.user != user %}
             {% set hasFollow = app.user.hasFollowUser(user) %}
             <a href="{{ path('adstacy_app_user_follow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow follow-user {% if hasFollow %}hide{% endif %}">Follow</a>
             <a href="{{ path('adstacy_app_user_unfollow', {username: ad.user.username}) }}" class="btn btn-primary btn-block btn-follow unfollow-user {% if not hasFollow %}hide{% endif %}">Unfollow</a>
