Redesign ad detail typography.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
@@ -136,6 +136,12 @@
       border-bottom: 0;
     }
   }
+  
+  .ad-description,
+  .user-about {
+    color: #555;
+    font-size: 13px;
+  }
 
   p {
     margin: 0;
