--- a/src/Adstacy/AppBundle/Resources/public/less/base/search.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/search.less
@@ -12,10 +12,11 @@
 }
 
 #search-dropdown-container {
+  color: #888;
   min-width: 80px;
-  text-align: left;
-  padding-right: 24px;
   margin-left: -1px;
+  padding-right: 24px;
+  text-align: left;
 
   .icon-angle-down {
     position: absolute;
