--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -180,6 +181,7 @@
               <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
               <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
               <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_contact') }}">about</a></li>
             </ul>
           </div>
         </nav>
