--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -181,7 +181,7 @@
               <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
               <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
               <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
-              <li><a href="{{ path('adstacy_app_contact') }}">about</a></li>
+              <li><a href="{{ path('adstacy_app_contact') }}">contact us</a></li>
             </ul>
           </div>
         </nav>
