Prevent search when search box is empty.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -92,7 +92,7 @@
               <form id="form-search" action="{{ path('adstacy_app_search') }}" class="navbar-form navbar-left" role="search">
                 {% set isSearchUser = app.request.attributes.get('_route') == 'adstacy_app_search' and app.request.query.get('type') == 'users' %}
                 <div id="search-container" class="input-group">
-                  <input type="text" class="form-control" placeholder="{{"search"|trans}}" name="q" value="{{ app.request.query.get('q') }}">
+                  <input id="search-box" type="text" class="form-control" placeholder="{{"search"|trans}}" name="q" value="{{ app.request.query.get('q') }}">
                   <input type="hidden" id="search-type" name="type" value="{% if isSearchUser %}users{% else %}ads{% endif %}">
                   <div class="input-group-btn">
                     <button id="search-dropdown-container" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
