--- a/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show.html.twig
@@ -9,6 +9,6 @@
 {% block javascripts %}
   {{ parent() }}
   <script type="text/javascript">
-    $('.user-info').ajaxlink('follow_user');
+    $('#user-profile').ajaxlink('follow_user');
   </script>
 {% endblock %}
