--- a/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/ad.less
@@ -189,3 +189,12 @@
   }
 }
 
+
+@media screen and (max-width: @screen-tablet) {
+  #ad-detail-container, #ad-detail-content {
+    width: 100%;
+  }
+  #ad-detail-sidebar {
+    display: none;
+  }
+}
