--- a/src/Adstacy/AppBundle/Resources/public/less/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/create_ad.less
@@ -41,8 +41,9 @@
   }
 }
 
-@media screen and (max-width: 768px) {
-  .create-ad-container {
+@media screen and (max-width: @screen-tablet) {
+  #create-ad-container {
+    width: 100%;
     .meta-area, .image-area {
       width: 100%;
       float: none;
