--- a/src/Adstacy/AppBundle/Resources/public/less/settings.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/settings.less
@@ -35,3 +35,12 @@
     resize: vertical;
   }
 }
+
+@media screen and (max-width: @screen-tablet) {
+  #settings-container {
+    width: 100%;
+  }
+  #settings-container .form-group .form-widget {
+    width: 100%;
+  }
+}
