--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -225,3 +225,8 @@ span.required {
   margin-left: auto;
   margin-right: auto;
 }
+
+.follow-action .btn-success:hover {
+  background-color: #333;
+  border-color: #333;
+}
