--- a/src/Adstacy/AppBundle/Resources/public/less/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/user.less
@@ -113,6 +113,7 @@
       top: -1px;
     }
     .btn-follow {
+      width: 100px;
       border-radius: 0 0 3px 0;
       color: #fff;
       height: 32px;
