fix share dropdown menu to dropup.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -23,7 +23,7 @@
         <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}"><span aria-hidden="true" data-icon="&#xe007;"></span></a>
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}"><span aria-hidden="true" data-icon="&#xe007;"></span></a>
       {% endif %}
-      <div class="btn-group">
+      <div class="btn-group dropup">
         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span aria-hidden="true" class="icon-share"></span></a>
         <ul class="ad-social-list dropdown-menu pull-right" role="menu">
           <li>
