add promoted state on promote btn.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -226,7 +226,8 @@ span.required {
   margin-right: auto;
 }
 
-.follow-action .btn-success:hover {
+.follow-action .btn-success:hover,
+.promote-action .btn-success:hover {
   background-color: #333;
   border-color: #333;
 }
