--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -24,7 +24,9 @@
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}"><span aria-hidden="true" data-icon="&#xe007;"></span></a>
       {% endif %}
       <div class="btn-group dropup">
-        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span aria-hidden="true" class="icon-share"></span></a>
+        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+          <span aria-hidden="true" class="icon-share"></span>
+        </a>
         <ul class="ad-social-list dropdown-menu pull-right" role="menu">
           <li>
             {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
