--- a/src/Adstacy/AppBundle/Resources/views/Page/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Page/show.html.twig
@@ -1,10 +1,12 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block content %}
-  <div id="page">
-    <h2>{{ page.title }}</h2>
-    <div id="page-content">
-        {{ page.content }} 
+  <div id="page" class="panel panel-info">
+    <div class="panel-heading">
+      <h2>{{ page.title }}</h2>
+    </div>
+    <div id="page-content" class="panel-body">
+      {{ page.content }}
     </div>
   </div>
 {% endblock %}
