Change color scheme.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -8,7 +8,7 @@ body {
 }
 
 .navbar {
-  .box-shadow(0 2px 8px #000);
+  .box-shadow(0 1px 1px #aaa);
 
   .btn-default {
     .box-shadow(0 0 1px #cacaca);
