--- a/src/Adstacy/AppBundle/Resources/public/less/base/search.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/search.less
@@ -6,8 +6,8 @@
   width: 360px;
 
   .form-control {
+    background-color: #fafafa;
     padding-left: 35px;
-    box-shadow: 0 0 5px #cacaca inset;
   }
 }
 
