--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -1,4 +1,6 @@
 body {
+  color: #333;
+  font-size: 13px;
   padding-top: 70px;
   margin-bottom: 14px;
 }
@@ -7,17 +9,12 @@ body {
   margin: auto;
 }
 
-.navbar {
+.navbar-default {
   .box-shadow(0 1px 1px #aaa);
 
   .btn-default {
     .box-shadow(0 0 1px #cacaca);
   }
-}
-
-#btn-navbar-expand {
-  font-size: 20px;
-  padding: 6px 12px;
 }
 
 #create-ads {
@@ -27,7 +24,7 @@ body {
   padding: 6px 12px;
   color: #fff;
   &:hover {
-    background-color: darken(@brand-primary, 10%);
+    background-color: lighter(@brand-primary, 5%);
   }
 }
 
@@ -36,12 +33,9 @@ body {
 }
 
 #user-dropdown {
-  li a {
-    padding: 8px 15px;
-  }
-  .dropdown-toggle {
-    min-width: 110px;
-    text-align: left;
+  > .dropdown-menu {
+    padding: 0;
+    width: 500px;
   }
   .btn-user {
     padding: 0;
@@ -59,57 +53,73 @@ body {
     vertical-align: middle;
   }
 }
+#menu-tags {
+  border-right: 1px solid #ddd;
+  float: left;
+  padding: 10px 15px;
+  margin: 0;
+  min-height: 200px;
+  width: 340px;
+  
+  a {
+    color: #333;
+    display: inline-block;
+    font-size: 13px;
+    margin-bottom: 10px;
+    padding: 2px 10px;
+    width: 130px;
+    &:hover {
+      background-color: #b00;
+      border-radius: @border-radius-base;
+      .box-shadow(inset 0 0 3px 0 fade(#000, 10%));
+      color: #fff;
+      text-decoration: none;
+    }
+  }
 
-ul.nav-expand {
-  list-style-type: none;
-  margin-bottom: 10px;
-  padding: 0;
-  line-height: 2;
-  overflow: hidden;
-  max-height: 10em;
+  .heading {
+    color: #ccc;
+    display: block;
+    font-family: Verdana;
+    font-size: 13px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    padding-left: 15px;
+  }
+}
+#menu-user {
+  background-color: #f4f4f4;
+  float: left;
+  margin: 0;
+  padding: 10px;
+  width: 140px;
 
   li {
-    width: 230px;
-    float: left;
-    margin-right: 20px;
-    margin-bottom: 5px;
-  }
+    margin-bottom: 10px;
 
-  li.hot-category a {
-      text-decoration: none;
+    a {
+      color: #999;
+      display: block;
       font-weight: bold;
-      background-color: @gray-lighter;
-      color: @brand-primary;
-      .box-shadow(inset 0 0 3px 0 fade(#000, 10%));
-      border-radius: @border-radius-base;
-      &:hover {
-        background-color: darken(@gray-lighter, 10%);
-      }
-  }
+    }
 
-  a {
-    color: greyscale(@brand-primary);
-    padding: 0 7px;
-
-    &:hover {
-      color: @brand-primary;
+    a:hover {
+      color: #b00;
       text-decoration: none;
-      font-weight: bold;
-      background-color: @gray-lighter;
-      .box-shadow(inset 0 0 3px 0 fade(#000, 10%));
-      border-radius: @border-radius-base;
     }
   }
 }
-
-#navbar-expand-container {
-  background-color: #fff;
-  border-top: 1px solid @border-color;
-  box-shadow: 0 1px 5px #ccc inset;
-  padding: 10px 0;
+#footer {
+  background-color: #f0f0f0;
+  border-top: 1px solid #ddd;
+  border-radius: 0 0 3px 3px;
+  margin: 0;
+  padding: 5px 10px;
 
   a {
-    display: block;
+    color: #888;
+    font-size: 12px;
+    font-weight: bold;
   }
 }
 
@@ -130,27 +140,6 @@ ul.nav-expand {
   padding: 0 10px 10px;
 }
 
-#footer {
-  list-style-type: none;
-  padding: 10px 0 0;
-  border-top: 1px dotted @border-color;
-
-  li {
-    float: left;
-    padding: 0 7px;
-    border-right: 1px solid @border-color;
-
-    a {
-      color: #aaa;
-      font-size: 12px;
-      font-weight: bold;
-    }
-
-    &:last-child {
-      border-right: 0;
-    }
-  }
-}
 
 .navbar-brand {
   padding: 8px 15px 0 15px;
