Add more shadow to menu-tags hover.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -71,7 +71,7 @@ body {
     &:hover {
       background-color: #b00;
       border-radius: @border-radius-base;
-      .box-shadow(inset 0 0 3px 0 fade(#000, 10%));
+      .box-shadow(inset 0 0 5px #555);
       color: #fff;
       text-decoration: none;
     }
